[package]
name = "mspm0g350x-pac"
version = "0.1.0"
authors = ["NanaHigh <bd8ejk@foxmail.com>"]
edition = "2021"

[dependencies]
critical-section = { version = "1.2.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]